# integracao-ml

./: .gitignore  Dockerfile.vendas  ads.py  main.py  pyproject.toml  vendas.py
src/: __init__.py
src/clients/: client.py
src/factories/: factory.py
src/interfaces/: credentials_repository_interface.py  encryption_service_interface.py  token_manager_interface.py
src/repositories/: credentials_repository.py
src/services/: encryption_service.py  token_manager.py  tratamento_de_resposta.py
src/utils/: data.py
terraform/: main.tf  variables.tf
